Bug 116138 - Insert Special Character also inserts selected character in current cursor in Title numbering
Summary: Insert Special Character also inserts selected character in current cursor in...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.2.1 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0 target:6.0.4
Keywords: bibisected, bisected, regression
: 116805 (view as bug list)
Depends on:
Blocks: Special-Character
  Show dependency treegraph
 
Reported: 2018-03-02 08:42 UTC by Nithin
Modified: 2019-09-24 20:37 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
The Title numbering dialog box (18.99 KB, image/png)
2018-03-02 08:44 UTC, Nithin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nithin 2018-03-02 08:42:43 UTC
Description:
In the Title Numbering dialog box when one tries to insert special character in either of before/after box, it inserts the selected character in the document where the cursor is located.

Steps to Reproduce:
1.Write some text and change its formatting to Heading 1
2. Open Title numbering toolbox and add numbering to Heading 1
3. Right click on the after of Before box as shown in attached image and add a special character
4. Insert any Character.

Actual Results:  
The selected character is inserted not only in the before/after box but also in the document where the cursor is located.

Expected Results:
The character should not be inserted in the document but only in the after/before box.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:58.0) Gecko/20100101 Firefox/58.0
Comment 1 Nithin 2018-03-02 08:44:13 UTC
Created attachment 140281 [details]
The Title numbering dialog box
Comment 2 Nithin 2018-03-02 08:58:26 UTC
The Problem is observed in ALL textboxes where special character can be inserted, Except (this maybe an incomplete list)

-Print Preview (Page-number and Zoom text boxes)
Comment 3 Dieter 2018-03-02 10:13:52 UTC
I only checked chapter numbering. I found the described behaviour

in

Version: 6.1.0.0.alpha0+ (x64)
Build ID: d64ce643275e0b2b0dea9e532fc261391dc8793c
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-01_03:24:30
Locale: de-DE (de_DE); Calc: CL

but not in 

Version: 5.4.5.1 (x64)
Build-ID: 79c9829dd5d8054ec39a82dc51cd9eff340dbee8
CPU-Threads: 4; BS: Windows 6.19; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group
Comment 4 Nithin 2018-03-03 11:26:04 UTC
Since this behavior is observed in multiple places where special characters can be inserted and as Dieter Praas mentions this is not observed in older versions, The problem probably has something to with the new "Insert Character Dialog" introduced in Version 6.
Comment 5 raal 2018-03-09 16:46:17 UTC
This seems to have begun at the below commit.
Adding Cc: to Akshay Deep ; Could you possibly take a look at this one?
Thanks

 3fdb504b62b2682a5e6dcec0fb3b0b3a974f5671 is the first bad commit
commit 3fdb504b62b2682a5e6dcec0fb3b0b3a974f5671
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Jun 20 19:22:51 2017 +0200

    source 710a39414569995bd5a8631a948c939dc73bcef9
author	Akshay Deep <akshaydeepiitr@gmail.com>	2017-05-11 13:27:38 +0530
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2017-06-19 14:36:32 +0200
commit 710a39414569995bd5a8631a948c939dc73bcef9 (patch)
tree e3da87fd9012713605004e8bd20ca2b98df45ac5
parent cacb75aa0bea36d4e5fc083a75a8b376133d3d65 (diff)
GSoC: Glyph View and Recent Characters Control in Special Characters dialog
Comment 6 Nithin 2018-04-13 10:28:25 UTC
*** Bug 116805 has been marked as a duplicate of this bug. ***
Comment 7 raal 2018-04-15 07:12:24 UTC
Caolán, similar to bug 113805 ..
Comment 8 Commit Notification 2018-04-16 10:53:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63ae7a39086d4f9d370f19a11c3b661134b94028

Resolves: tdf#116138 insert special char problem in chapter numbering

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2018-04-16 10:55:06 UTC
backports in gerrit
Comment 10 Commit Notification 2018-04-16 12:01:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cc34e1c5d6a10d5a7dc315080b26bce848d3aa32&h=libreoffice-6-0

Resolves: tdf#116138 insert special char problem in chapter numbering

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Dieter 2019-09-24 20:37:25 UTC
VERIFIED with

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded