Resolves: tdf#116138 insert special char problem in chapter numbering

Change-Id: If79d23d7c5e99a88d0026295db002c25c1b07ff3
Reviewed-on: https://gerrit.libreoffice.org/52942
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>