cui/source/factory/init.cxx
@@ -26,7 +26,7 @@ extern "C"
 SAL_DLLPUBLIC_EXPORT bool GetSpecialCharsForEdit(vcl::Window* i_pParent, const vcl::Font& i_rFont, OUString& o_rResult)
 {
     bool bRet = false;
-    SvxCharacterMap aDlg(i_pParent ? i_pParent->GetFrameWeld() : nullptr);
+    SvxCharacterMap aDlg(i_pParent ? i_pParent->GetFrameWeld() : nullptr, nullptr, false);
     aDlg.DisableFontSelection();
     aDlg.SetCharFont(i_rFont);
     if (aDlg.execute() == RET_OK)
